--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,12 @@
  <version>1.0-SNAPSHOT</version>
  <name>drills</name>
  <url>http://maven.apache.org</url>
+
+    <properties>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+    </properties>
+
  <dependencies>
    <!-- https://mvnrepository.com/artifact/junit/junit -->
 <dependency>
